# Qt5ChessGame

./: CMakeLists.txt  README.md
include/ChessGame/: chessboard.h  chessboard.hpp  chesspiece.h  chesspiece.hpp  pch.h  validatepiecemove.h  validatepiecemove.hpp
src/: chessboard.cpp  chesspiece.cpp  chesspiece.h  drawchessboard.cpp  drawchessboard.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pch.cpp  validatepiecemove.cpp  validatepiecemove.h
